--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,4 @@ version = "1.3.0"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [compat]
-julia = "1.0-1.5"
+julia = "~1.0, ~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
