--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         julia-version:
-          - "1.3"
-          - "1.4"
-          - "1.5"
+          - "nightly"
         os:
           - ubuntu-latest
         julia-arch:
