--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 name = "LazyArtifacts"
 uuid = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
+version = "1.11.0"
 
 [deps]
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
