--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,21 +14,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version:
-          - "nightly"
-        os:
-          - ubuntu-latest
-        julia-arch:
-          - x64
+        include:
+          - os: ubuntu-latest
+            julia-arch: x64
+            julia-version: 'nightly'
+          - os: windows-latest
+            julia-arch: x64
+            julia-version: 'nightly'
+          - os: macos-latest
+            julia-arch: aarch64
+            julia-version: 'nightly'
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.julia-version }}
           arch: ${{ matrix.julia-arch }}
-      - uses: julia-actions/julia-buildpkg@latest
-      - uses: julia-actions/julia-runtest@latest
-      - uses: julia-actions/julia-uploadcodecov@v0.1
-        continue-on-error: true
-      - uses: julia-actions/julia-uploadcoveralls@v0.1
-        continue-on-error: true
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v2
+        with:
+          files: lcov.info
